--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "payment-next",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://pavel8lisenkov.github.io/payment-next",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,7 +10,8 @@
     "lint": "next lint",
     "json-server": "json-server --watch operators-list.json --port 5000",
     "serve": "concurrently \"npm run dev\" \"npm run json-server\"",
-    "build-api": "concurrently \"npm run build\" \"npm run json-server\""
+    "build-api": "concurrently \"npm run build\" \"npm run json-server\"",
+    "deploy": "gh-pages -d .next"
   },
   "dependencies": {
     "@types/node": "18.14.5",
@@ -21,5 +23,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
