--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^5.3.8",
     "typescript": "4.9.5"
   },
   "devDependencies": {
-    "gh-pages": "^5.0.0"
+    "@types/styled-components": "^5.1.26",
+    "file-loader": "^6.2.0",
+    "gh-pages": "^5.0.0",
+    "url-loader": "^4.1.1"
   }
 }
