--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
+    "babel-plugin-styled-components": "^2.0.7",
     "file-loader": "^6.2.0",
     "gh-pages": "^5.0.0",
     "url-loader": "^4.1.1"
